--- a/casestudies/55/casestudy/www/layout/case_id_55_id_556.html
+++ b/casestudies/55/casestudy/www/layout/case_id_55_id_556.html
@@ -474,6 +474,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/127/Barnes_on_student_newspaper_relationship.mp3"/>-->
+         <audio controls><source src="../../files/audios/127/Barnes_on_student_newspaper_relationship.mp3" type="audio/mpeg"></audio>
         </p>
         <p class="final">
          From the start,
