--- a/casestudies/55/casestudy/www/layout/case_id_55_id_559.html
+++ b/casestudies/55/casestudy/www/layout/case_id_55_id_559.html
@@ -227,6 +227,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/128/Chapman_on Gilles.mp3"/>-->
+         <audio controls><source src="../../files/audios/128/Chapman_on&#32;Gilles.mp3" type="audio/mpeg"></audio>
         </p>
         <p class="final">
          This put the pressure on Barnes to use her pulpit as chair of the advisory committee to craft the news bureau’s shape and mission. “The bureau had to be done right or it was obviously not going to work,” Barnes says. “Part of the role of the advisory board was to make sure KSU understood that.” This was delicate because Barnes had no formal say on several decisions she considered key to the success of both the bureau’s educational and civic mission.
