--- a/casestudies/55/casestudy/www/layout/case_id_55_id_560.html
+++ b/casestudies/55/casestudy/www/layout/case_id_55_id_560.html
@@ -250,6 +250,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/129/Cross_on_market.mp3"/>-->
+         <audio controls><source src="../../files/audios/129/Cross_on_market.mp3" type="audio/mpeg"></audio>
         </p>
         <p class="final">
          By the fall of 2009, just seven fulltime journalists covered state politics in
@@ -282,6 +283,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/132/barnes_on_courier_journal.mp3"/>-->
+         <audio controls><source src="../../files/audios/132/barnes_on_courier_journal.mp3" type="audio/mpeg"></audio>
         </p>
         <p class="final">
          <strong>
