--- a/casestudies/55/casestudy/www/layout/case_id_55_id_561.html
+++ b/casestudies/55/casestudy/www/layout/case_id_55_id_561.html
@@ -266,6 +266,7 @@ font-style:italic;
          .
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/130/Cross_on_director.mp3"/>-->
+         <audio controls><source src="../../files/audios/130/Cross_on_director.mp3" type="audio/mpeg"></audio>
         </p>
         <p class="final">
          Distribution, Cross figured, was straightforward. Reporters could post stories on a bureau website. The Kentucky Press Association had recently established a story sharing service, which he imagined the bureau could join. Meanwhile he, Barnes,
@@ -292,6 +293,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/131/Cross_on_benefits_for_newspapers.mp3"/>-->
+         <audio controls><source src="../../files/audios/131/Cross_on_benefits_for_newspapers.mp3" type="audio/mpeg"></audio>
         </p>
         <p class="final">
          At the same time, Cross recognized that his more ambitious civic vision for the bureau raised numerous questions. Would the university oversee content? Would client papers have editorial input? Who was liable in the event of libel or other offenses? Then there were revenue questions. Should the news bureau charge fees? Should it be a partnership with the Kentucky Press Association? Would the students be paid for their work? For that matter, would working in the bureau come at a cost to their overall academic experience? Finally, did subsidizing private media companies by offering free content conflict with the university’s educational and civic mission?
