--- a/casestudies/56/casestudy/www/layout/case_id_56_id_565.html
+++ b/casestudies/56/casestudy/www/layout/case_id_56_id_565.html
@@ -393,6 +393,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/136/winaski on press freedom in Argentina.mp3"/>-->
+         <audio controls><source src="../../files/audios/136/winaski&#32;on&#32;press&#32;freedom&#32;in&#32;Argentina.mp3" type="audio/mpeg"></audio>
         </p>
         <p class="final-noindent">
          <strong>
