--- a/casestudies/56/casestudy/www/layout/case_id_56_id_566.html
+++ b/casestudies/56/casestudy/www/layout/case_id_56_id_566.html
@@ -371,6 +371,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/139/Sierra on why Clarin supported Kirchner.mp3"/>-->
+         <audio controls><source src="../../files/audios/139/Sierra&#32;on&#32;why&#32;Clarin&#32;supported&#32;Kirchner.mp3" type="audio/mpeg"></audio>
         </p>
         <p class="final-noindent">
          Yet Kirchner had an uneasy relationship with the media. Unique among modern Argentine presidents, Kirchner did not hold a single press conference throughout his entire four-year term. It was so difficult to get information out of his spokesman, Miguel Nuñez, that reporters jokingly referred to him as “
