--- a/casestudies/56/casestudy/www/layout/case_id_56_id_567.html
+++ b/casestudies/56/casestudy/www/layout/case_id_56_id_567.html
@@ -290,6 +290,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/134/Fiona Ortiz on Kirchners war on business.mp3"/>-->
+         <audio controls><source src="../../files/audios/134/Fiona&#32;Ortiz&#32;on&#32;Kirchners&#32;war&#32;on&#32;business.mp3" type="audio/mpeg"></audio>
         </p>
         <p class="final-noindent">
          <i style="">
