--- a/casestudies/59/casestudy/www/layout/case_id_59_id_575.html
+++ b/casestudies/59/casestudy/www/layout/case_id_59_id_575.html
@@ -238,6 +238,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/148/Lyon on evolution of embed and pool system.mp3"/>-->
+         <audio controls><source src="../../files/audios/148/Lyon&#32;on&#32;evolution&#32;of&#32;embed&#32;and&#32;pool&#32;system.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
        <div class="book-navigation" style="clear:both">
