--- a/casestudies/59/casestudy/www/layout/case_id_59_id_580.html
+++ b/casestudies/59/casestudy/www/layout/case_id_59_id_580.html
@@ -270,6 +270,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/155/Collins on the job of photo editing.mp3"/>-->
+         <audio controls><source src="../../files/audios/155/Collins&#32;on&#32;the&#32;job&#32;of&#32;photo&#32;editing.mp3" type="audio/mpeg"></audio>
         </p>
         <div>
          <br clear="all"/>
