--- a/casestudies/59/casestudy/www/layout/case_id_59_id_581.html
+++ b/casestudies/59/casestudy/www/layout/case_id_59_id_581.html
@@ -232,6 +232,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/154/Daniszewski on his first reaction to the photo.mp3"/>-->
+         <audio controls><source src="../../files/audios/154/Daniszewski&#32;on&#32;his&#32;first&#32;reaction&#32;to&#32;the&#32;photo.mp3" type="audio/mpeg"></audio>
         </p>
         <div style="float: right; padding: 10px;">
          <img src="../../files/photos/453/oreskes_and _ap_staff.jpg"/>
