--- a/casestudies/59/casestudy/www/layout/case_id_59_id_582.html
+++ b/casestudies/59/casestudy/www/layout/case_id_59_id_582.html
@@ -232,6 +232,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/153/Carroll on permission.mp3"/>-->
+         <audio controls><source src="../../files/audios/153/Carroll&#32;on&#32;permission.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
          Bernard’s parents did not immediately raise objections to the photograph. Days later, however, John Bernard, himself a former Marine first sergeant and Gulf War veteran, called Adams to request that AP not distribute the photo. Doing so, he said, would cause his family additional anguish. Adams conveyed the objection to Daniszewski.
