--- a/casestudies/59/casestudy/www/layout/case_id_59_id_583.html
+++ b/casestudies/59/casestudy/www/layout/case_id_59_id_583.html
@@ -238,6 +238,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/156/Curley on the story had to be told.mp3"/>-->
+         <audio controls><source src="../../files/audios/156/Curley&#32;on&#32;the&#32;story&#32;had&#32;to&#32;be&#32;told.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
          Curley did not argue with Gates; he believed the defense secretary was making a legitimate argument, though he disagreed. Curley instead told Gates he would reopen discussion with the news department. The phone conversation lasted about five minutes.
@@ -254,6 +255,7 @@ font-style:italic;
          </i>
          <br>
           <!--<img alt="" border="0" class="audiofile" src="../../files/audios/157/Carroll on pissing off the Pentagon.mp3"/>-->
+          <audio controls><source src="../../files/audios/157/Carroll&#32;on&#32;pissing&#32;off&#32;the&#32;Pentagon.mp3" type="audio/mpeg"></audio>
          </br>
         </p>
         <p>
