--- a/casestudies/38/casestudy/www/layout/case_id_38_id_423.html
+++ b/casestudies/38/casestudy/www/layout/case_id_38_id_423.html
@@ -416,6 +416,7 @@ div.Section1
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/78/Harris on trends.mp3"/>-->
+         <audio controls><source src="../../files/audios/78/Harris&#32;on&#32;trends.mp3" type="audio/mpeg"></audio>
         </p>
         <div>
          <br clear="all"/>
