--- a/casestudies/38/casestudy/www/layout/case_id_38_id_426.html
+++ b/casestudies/38/casestudy/www/layout/case_id_38_id_426.html
@@ -329,6 +329,7 @@ div.Section1
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/80/VandeHei on meeting with venture capitalist.mp3"/>-->
+         <audio controls><source src="../../files/audios/80/VandeHei&#32;on&#32;meeting&#32;with&#32;venture&#32;capitalist.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
          Harris and VandeHei feared that, on their own, they lacked the expertise to staff and start their new venture. In any case, it might be impossible to do it in time to cover the 2008 presidential election. Harris and VandeHei wanted to launch the website by early 2007. The President’s State of the Union address in January was always heavily covered in the political press—and Harris and VandeHei thought tying their political news site’s launch to that event would earn them some helpful publicity.
