--- a/casestudies/29/casestudy/www/layout/case_id_29_id_326.html
+++ b/casestudies/29/casestudy/www/layout/case_id_29_id_326.html
@@ -303,6 +303,7 @@ font-style:italic;
          <br/>
          <i>
           <!--<img alt="" border="0" class="audiofile" src="../../files/audios/54/Greg Jonsson on interviewing McNichols.mp3"/>-->
+          <audio controls><source src="../../files/audios/54/Greg&#32;Jonsson&#32;on&#32;interviewing&#32;McNichols.mp3" type="audio/mpeg"></audio>
          </i>
         </p>
         <div>
