--- a/casestudies/29/casestudy/www/layout/case_id_29_id_327.html
+++ b/casestudies/29/casestudy/www/layout/case_id_29_id_327.html
@@ -269,6 +269,7 @@ font-style:italic;
          </span>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/55/Adam Goodman on deciding what to print.mp3"/>-->
+         <audio controls><source src="../../files/audios/55/Adam&#32;Goodman&#32;on&#32;deciding&#32;what&#32;to&#32;print.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
          But she had not personally seen Thornton shoot them. Whereas she had witnessed the shooting of Yost and Ballman, she had a different role as far as Thornton’s other victims were concerned. In those cases, she was acting as a reporter interviewing eyewitnesses. How should Goodman and Jonsson weigh the different kinds of information? Should they trust others’ eyewitness accounts as much as they did McNichols’?
