--- a/casestudies/29/casestudy/www/layout/case_id_29_id_328.html
+++ b/casestudies/29/casestudy/www/layout/case_id_29_id_328.html
@@ -275,6 +275,7 @@ font-style:italic;
          <i>
           <br/>
           <!--<img alt="" border="0" class="audiofile" src="../../files/audios/56/Stephen Deere on the Thornton house.mp3"/>-->
+          <audio controls><source src="../../files/audios/56/Stephen&#32;Deere&#32;on&#32;the&#32;Thornton&#32;house.mp3" type="audio/mpeg"></audio>
          </i>
         </p>
         <div>
