--- a/casestudies/29/casestudy/www/layout/case_id_29_id_330.html
+++ b/casestudies/29/casestudy/www/layout/case_id_29_id_330.html
@@ -271,6 +271,7 @@ font-style:italic;
          </span>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/57/Hunn on reporting at the hospital.mp3"/>-->
+         <audio controls><source src="../../files/audios/57/Hunn&#32;on&#32;reporting&#32;at&#32;the&#32;hospital.mp3" type="audio/mpeg"></audio>
         </p>
         <div>
          <br clear="all"/>
