--- a/casestudies/30/casestudy/www/layout/case_id_30_id_334.html
+++ b/casestudies/30/casestudy/www/layout/case_id_30_id_334.html
@@ -321,6 +321,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/58/Lebo on ownership change.mp3"/>-->
+         <audio controls><source src="../../files/audios/58/Lebo&#32;on&#32;ownership&#32;change.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
          <b>
