--- a/casestudies/30/casestudy/www/layout/case_id_30_id_343.html
+++ b/casestudies/30/casestudy/www/layout/case_id_30_id_343.html
@@ -310,6 +310,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/59/Charisse on discussions with Lauri.mp3"/>-->
+         <audio controls><source src="../../files/audios/59/Charisse&#32;on&#32;discussions&#32;with&#32;Lauri.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
          Lebo decided to give a balanced description of the debate over Buckingham’s proposal to teach intelligent design. She presented an example from the intelligent design textbook
