--- a/casestudies/29/casestudy/www/layout/case_id_29_id_324.html
+++ b/casestudies/29/casestudy/www/layout/case_id_29_id_324.html
@@ -265,6 +265,7 @@ font-style:italic;
          </span>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/53/Pat Gauen on finding out.mp3"/>-->
+         <audio controls><source src="../../files/audios/53/Pat&#32;Gauen&#32;on&#32;finding&#32;out.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
          Metro Editor
