--- a/casestudies/14/casestudy/www/layout/case_id_14_id_142.html
+++ b/casestudies/14/casestudy/www/layout/case_id_14_id_142.html
@@ -658,6 +658,7 @@ div.Section1
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/42/Baron on documenting pattern.mp3"/>-->
+         <audio controls><source src="../../files/audios/42/Baron&#32;on&#32;documenting&#32;pattern.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
          <span>
@@ -693,6 +694,7 @@ div.Section1
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/46/Pfeiffer interesting project.mp3"/>-->
+         <audio controls><source src="../../files/audios/46/Pfeiffer&#32;interesting&#32;project.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
          <span>
