--- a/casestudies/14/casestudy/www/layout/case_id_14_id_150.html
+++ b/casestudies/14/casestudy/www/layout/case_id_14_id_150.html
@@ -470,6 +470,7 @@ div.Section1
          </i>
          <br>
           <!--<img alt="" border="0" class="audiofile" src="../../files/audios/43/Carroll on church directories.mp3"/>-->
+          <audio controls><source src="../../files/audios/43/Carroll&#32;on&#32;church&#32;directories.mp3" type="audio/mpeg"></audio>
          </br>
         </p>
         <p>
