--- a/casestudies/14/casestudy/www/layout/case_id_14_id_152.html
+++ b/casestudies/14/casestudy/www/layout/case_id_14_id_152.html
@@ -558,6 +558,7 @@ div.Section1
            </i>
            <br/>
            <!--<img alt="" border="0" class="audiofile" src="../../files/audios/48/Rezendes we were all really devastated.mp3"/>-->
+           <audio controls><source src="../../files/audios/48/Rezendes&#32;we&#32;were&#32;all&#32;really&#32;devastated.mp3" type="audio/mpeg"></audio>
           </p>
          </span>
         </p>
