--- a/casestudies/14/casestudy/www/layout/case_id_14_id_154.html
+++ b/casestudies/14/casestudy/www/layout/case_id_14_id_154.html
@@ -381,6 +381,8 @@ div.Section1
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/50/Robinson on not believing own story.mp3"/>-->
+         <audio controls><source src="../../files/audios/50/Robinson&#32;on&#32;not&#32;believing&#32;own&#32;story.mp3" type="audio/mpeg"></audio>
+         
         </p>
         <p>
          <span>
