--- a/casestudies/146/casestudy/www/layout/case_id_146_id_1006.html
+++ b/casestudies/146/casestudy/www/layout/case_id_146_id_1006.html
@@ -243,6 +243,7 @@ font-style:italic;
           </i>
           <br/>
           <!--<img alt="" border="0" class="audiofile" src="../../files/audios/418/abramsexc.mp3"/>-->
+          <audio controls><source src="../../files/audios/418/abramsexc.mp3" type="audio/mpeg"></audio>
          </p>
         </blockquote>
         <div style="float:right;padding:10px">
