--- a/casestudies/146/casestudy/www/layout/case_id_146_id_1010.html
+++ b/casestudies/146/casestudy/www/layout/case_id_146_id_1010.html
@@ -235,6 +235,7 @@ font-style:italic;
           </i>
           <br/>
           <!--<img alt="" border="0" class="audiofile" src="../../files/audios/424/okelloexc.mp3"/>-->
+          <audio controls><source src="../../files/audios/424/okelloexc.mp3" type="audio/mpeg"></audio>
          </p>
         </blockquote>
         <p>
@@ -303,6 +304,7 @@ font-style:italic;
           </i>
           <br/>
           <!--<img alt="" border="0" class="audiofile" src="../../files/audios/422/nuwagabaexc.mp3"/>-->
+          <audio controls><source src="../../files/audios/422/nuwagabaexc.mp3" type="audio/mpeg"></audio>
          </p>
         </blockquote>
         <p>
@@ -318,6 +320,7 @@ font-style:italic;
           </i>
           <br/>
           <!--<img alt="" border="0" class="audiofile" src="../../files/audios/420/elsadrexc.mp3"/>-->
+          <audio controls><source src="../../files/audios/420/elsadrexc.mp3" type="audio/mpeg"></audio>
          </p>
         </blockquote>
         <div>
