--- a/casestudies/126/casestudy/www/layout/case_id_126_id_867.html
+++ b/casestudies/126/casestudy/www/layout/case_id_126_id_867.html
@@ -254,6 +254,7 @@ font-style:italic;
           </i>
           <br/>
           <!--<img alt="" border="0" class="audiofile" src="../../files/audios/366/PaulExcerpt.mp3"/>-->
+          <audio controls><source src="../../files/audios/366/PaulExcerpt.mp3" type="audio/mpeg"></audio>
          </p>
         </blockquote>
         <p align="left">
@@ -287,6 +288,7 @@ font-style:italic;
           </i>
           <br/>
           <!--<img alt="" border="0" class="audiofile" src="../../files/audios/364/KenanExcerpt.mp3"/>-->
+          <audio controls><source src="../../files/audios/364/KenanExcerpt.mp3" type="audio/mpeg"></audio>
          </p>
         </blockquote>
         <p align="left">
