--- a/casestudies/2/casestudy/www/layout/case_id_2.html
+++ b/casestudies/2/casestudy/www/layout/case_id_2.html
@@ -171,6 +171,7 @@ font-style:italic;
               The case study can be used in a class on editorial decision-making, on broadcast media, on documentary film making or on public service broadcasting.
             </p>
             <div>
+            </div>
               <p>
 	      	    <strong>Credits</strong>
 	          </p>
