--- a/casestudies/118/casestudy/www/layout/case_id_118.html
+++ b/casestudies/118/casestudy/www/layout/case_id_118.html
@@ -135,31 +135,44 @@
 	&nbsp;</div>
 <div>
 	<p>
-		<em>CSJ-13-0052.0</em> This case tells the story of a small, online publication in Halifax, Nova Scotia, which has confounded the punditry of the digital era. AllNovaScotia.com (ANS) sits firmly behind a paywall, does not allow its stories to be shared online, and even refuses subscriptions to employees of rival publications. Nonetheless, it has been financially successful. But in 2013, founder David Bentley faced a crossroads. At 69, he was ready to step back. But what should the next step be: sell out? Duplicate the ANS model elsewhere? Go more digital?</p>
+		<em>CSJ-13-0052.0</em> This case tells the story of a small, online publication in Halifax, Nova Scotia, which has confounded the punditry of the digital era. AllNovaScotia.com (ANS) sits firmly behind a paywall, does not allow its stories to be shared online, and even refuses subscriptions to employees of rival publications. Nonetheless, it has been financially successful. But in 2013, founder David Bentley faced a crossroads. At 69, he was ready to step back. But what should the next step be: sell out? Duplicate the ANS model elsewhere? Go more digital?
+	</p>
 	<p>
-		The case provides not only a history of ANS, but the larger context of the decline and efforts to recover of for-profit mainstream media in the 21<sup>st</sup> century. It gives students an overview of the disruptions that the Internet brought to the longstanding business model for media, describes many of the experiments that media undertook in order to adapt, and chronicles the financial fallout from the collapse of advertising revenue. &nbsp;</p>
+		The case provides not only a history of ANS, but the larger context of the decline and efforts to recover of for-profit mainstream media in the 21<sup>st</sup> century. It gives students an overview of the disruptions that the Internet brought to the longstanding business model for media, describes many of the experiments that media undertook in order to adapt, and chronicles the financial fallout from the collapse of advertising revenue. &nbsp;
+	</p>
 	<p>
-		Use this case to examine some of the tenets of digital wisdom: is multimedia always better than print? Is open access to content a plus? What are subscribers willing to pay for? What do they value? Ask students to consider whether the ANS model can transfer elsewhere, or is Halifax a unique market? What about Bentley&mdash;is he a genius, or an eccentric? Which of the options presented in the case&mdash;or others the class may come up with&mdash;is the most plausible if ANS is to continue its success?</p>
+		Use this case to examine some of the tenets of digital wisdom: is multimedia always better than print? Is open access to content a plus? What are subscribers willing to pay for? What do they value? Ask students to consider whether the ANS model can transfer elsewhere, or is Halifax a unique market? What about Bentley&mdash;is he a genius, or an eccentric? Which of the options presented in the case&mdash;or others the class may come up with&mdash;is the most plausible if ANS is to continue its success?
+	</p>
 	<p>
-		Use this case in a course/class about the business of media, strategic management, or entrepreneurship.</p>
-	<p>
+		Use this case in a course/class about the business of media, strategic management, or entrepreneurship.
+	</p>
+</div>
 </div>
 <div>
 	<strong>Credits</strong>:<br />
 	<div data-angle="0" data-canvas-width="136.07712175369264" data-font-name="g_font_19_0" dir="ltr" style="font-size: 11.84px; font-family: sans-serif; left: 565.514px; top: 881.92px; transform: rotate(0deg) scale(0.95829, 1); transform-origin: 0% 0% 0px;">
-		<span style="font-size:11px;">This case was written by Associate Professor Kelly Toughill and contributed to the Case Consortium @ Columbia. Prof. Toughill is a faculty member at the University of King&rsquo;s College, Canada. Victoria Cate May Burton provided research assistance as part of the Student Assistance Program at the University of King&#39;s College. (1213)</span></div>
+		<span style="font-size:11px;">This case was written by Associate Professor Kelly Toughill and contributed to the Case Consortium @ Columbia. Prof. Toughill is a faculty member at the University of King&rsquo;s College, Canada. Victoria Cate May Burton provided research assistance as part of the Student Assistance Program at the University of King&#39;s College. (1213)
+		</span>
+	</div>
 </div>
 <div>
-	&nbsp;</div>
+	&nbsp;
+</div>
 <div>
-	<span style="font-size: 10px;">Copyright &copy; 2013 The Trustees of Columbia University in the City of New York and <span style="font-size: 10px;">&copy; Kelly Toughill</span> . No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium.</span></div>
+	<span style="font-size: 10px;">
+	Copyright &copy; 2013 The Trustees of Columbia University in the City of New York and <span style="font-size: 10px;">&copy; Kelly Toughill</span> . No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium.
+	</span>
+</div>
 <p></p>
 <div>
-	<strong>For further information:</strong></div>
+	<strong>For further information:</strong>
+</div>
 <div>
-	E-mail: <a href="mailto:ccnmtl+casestudies@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@columbia.edu</a></div>
+	E-mail: <a href="mailto:ccnmtl+casestudies@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@columbia.edu</a>
+</div>
 <div>
-	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
+	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a>
+</div>
 
 
 <div class="book-navigation" style="clear:both">
@@ -195,7 +208,8 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 try {
     var pageTracker = _gat._getTracker("UA-51144540-10");
     pageTracker._trackPageview();
-} catch(err) {}</script>
+} catch(err) {}
+</script>
 
 </body>
 </html>
