--- a/casestudies/122/casestudy/www/layout/case_id_122.html
+++ b/casestudies/122/casestudy/www/layout/case_id_122.html
@@ -186,9 +186,9 @@ font-style:italic;
 	<b>Credits:</b></p>
 <div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19.200000762939453px;">
 	<p style="margin-top: 0.5em; margin-bottom: 0.9em; text-indent: 0em !important;">
-		<span style="font-size:11px;"><em>This case was written by Ayesha Daya for the Aga Khan University Graduate School of Media and Communications. (0114)</em></span></p>
+		<span style="font-size:11px;"><em>This case was written for the Aga Khan University Graduate School of Media and Communications. (0114)</em></span></p>
 	<p style="margin-top: 0.5em; margin-bottom: 0.9em; text-indent: 0em !important;">
-		<span style="font-size:11px;">&copy; 2013 The Aga Khan University Graduate School of Media and Communications. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of Aga Khan University.</span></p>
+		<span ><!-- copyright notice --></span</p>
 </div>
 <div>
 	<strong>For further information:</strong></div>
