fix paragraph order - PMT #107575

--- a/casestudies/133/casestudy/www/layout/case_id_133_id_949.html
+++ b/casestudies/133/casestudy/www/layout/case_id_133_id_949.html
@@ -335,9 +335,45 @@ font-style:italic;
 		Simron Singh in the Nicobars</p>
 </div>
 <p align="left">
-	In April, Institute Director Marina Fischer-Kowalski made the decision: the institute would partner with Caritas Austria, a Catholic relief organization, to create a new, academic-based, special-purpose NGO&mdash;the Sustainable Indigenous Futures fund (SIF)&mdash;to support sustainable development in the Nicobars. Drawing on approximately &euro;400,000 (about $500,000) in pledged funds, SIF would help the Nicobarese determine their own future, building on their unique history and culture. SIF formally launched in May 2005.Singh turned for advice to colleagues at the Institute of Social Ecology in Vienna. As they debated whether it was proper for research scientists to engage in humanitarian relief efforts, offers of aid for the Nicobarese started rolling in. The institute took a wait-and-see approach, but on his first post-tsunami visit to the islands in early 2005, Singh reported that the recovery was starting to create problems of its own: a &ldquo;second tsunami&rdquo; of overabundant supplies, cultural misunderstanding, competition among nongovernmental organizations (NGOs), and misguided rehabilitation programs. Singh pleaded for the institute to intervene with a culturally appropriate plan.</p>
+    Singh turned for advice to colleagues at the Institute of Social
+    Ecology in Vienna. As they debated whether it was proper for
+    research scientists to engage in humanitarian relief efforts,
+    offers of aid for the Nicobarese started rolling in. The institute
+    took a waitLandLsee approach, but on his first postLtsunami visit
+    to the islands in early 2005, Singh reported that the recovery was
+    starting to create problems of its own: a "second tsunami" of
+    overabundant supplies, cultural misunderstanding, competition
+    among nongovernmental organizations (NGOs), and misguided
+    rehabilitation programs. Singh pleaded for the institute to
+    intervene with a culturally appropriate plan.
+</p>
+<p align="left">
+	In April, Institute Director Marina Fischer-Kowalski made the
+	decision: the institute would partner with Caritas Austria, a
+	Catholic relief organization, to create a new, academic-based,
+	special-purpose NGO&mdash;the Sustainable Indigenous Futures fund
+	(SIF)&mdash;to support sustainable development in the
+	Nicobars. Drawing on approximately &euro;400,000 (about $500,000)
+	in pledged funds, SIF would help the Nicobarese determine their
+	own future, building on their unique history and culture. SIF
+	formally launched in May 2005.
+</p>
 <p>
-	Sustainable development was proving more difficult than expected. Over the next year, SIF tried in several ways to reengage the Nicobarese in designing their own recovery, including a cross-cultural retreat in the Himalayas where a new team of Nicobarese worked with SIF, a band of forest nomads, and SOPHIA, an Indian NGO that specialized in capacity building among indigenous peoples. But six months later, SOPHIA reported that communication with the Nicobarese had broken down completely, and that they had made little progress on any of their stated objectives.In September 2005, SIF invited a delegation of Nicobarese leaders to Vienna to develop concrete plans. By the end of the year, two projects were up and running in the Nicobars: a student hostel and a network of fishing and horticulture cooperatives. But the Nicobarese struggled with paperwork and bookkeeping. Legal and accounting difficulties arose and, by March 2006, Caritas came under pressure from donors for slow results. More seriously, the native culture seemed to be fast disappearing, a victim of the sudden introduction of a cash economy, a glut of Western consumer goods, and the sharp dealings of native &ldquo;tsunami captains.&rdquo; In June 2006, Singh warned that the islanders were becoming lazy and aid-dependent.</p>
+    In September 2005, SIF invited a delegation of Nicobarese leaders
+    to Vienna to develop concrete plans. By the end of the year, two
+    projects were up and running in the Nicobars: a student hostel and
+    a network of fishing and horticulture cooperatives. But the
+    Nicobarese struggled with paperwork and bookkeeping. Legal and
+    accounting difficulties arose and, by March 2006, Caritas came
+    under pressure from donors for slow results. More seriously, the
+    native culture seemed to be fast disappearing, a victim of the
+    sudden introduction of a cash economy, a glut of Western consumer
+    goods, and the sharp dealings of native "tsunami captains." In
+    June 2006, Singh warned that the islanders were becoming lazy and
+    aidLdependent.
+</p>
+<p>
+	Sustainable development was proving more difficult than expected. Over the next year, SIF tried in several ways to reengage the Nicobarese in designing their own recovery, including a cross-cultural retreat in the Himalayas where a new team of Nicobarese worked with SIF, a band of forest nomads, and SOPHIA, an Indian NGO that specialized in capacity building among indigenous peoples. But six months later, SOPHIA reported that communication with the Nicobarese had broken down completely, and that they had made little progress on any of their stated objectives.</p>
 <p>
 	As the SIF Steering Committee gathered in Vienna in November 2007, it faced some difficult facts. Nearly three years had passed since the tsunami, and SIF&rsquo;s work was at an impasse. Donors were clamoring for results, and Caritas was threatening to pull out. Nearly &euro;300,000 remained in the SIF fund, but what should SIF spend it on? In the face of cultural collapse, what did sustainable development mean? Could the scientists and the humanitarians broker a workable solution?&nbsp;</p>
 </div>
