Add missing videos - PMT #110103

--- a/casestudies/133/casestudy/www/layout/case_id_133_id_950.html
+++ b/casestudies/133/casestudy/www/layout/case_id_133_id_950.html
@@ -332,15 +332,21 @@ font-style:italic;
 	The Nicobarese were not Stone Age people. They had had contact with passing ships for 1,300 years and sporadic engagement with a succession of colonial administrations. Before the tsunami, they were aware of the outside world and had become partially assimilated. They had some electricity. Their children went to government primary schools. Some wore eyeglasses and rode bicycles. Most called themselves Christians, a handful Muslims. But these were modern accretions thinly layered over an ancient island culture with roots in the Malay-Burmese cultural complex.<sup><a href="case_id_133_id_950.html#_ftn2" name="_ftnref2" title="">[2]</a></sup></p>
 <p>
 	Traditional Nicobarese culture was inextricably tied to the island ecosystem. The Nicobarese fished, grew coconuts, and raised pigs and chickens. They planted small gardens of bananas and yams. They lived in coastal villages and built their canoes and thatched houses from materials found along the coast and in the interior rainforest. When cash was needed, to buy rice or kerosene for example, the Nicobarese sold dried coconut, called copra, to the immigrant traders.</p>
-<p>
-	<span class="caption2"><a class="media {width:420, height:286}" href="https://s3.amazonaws.com/caseconsortium/AFTERMATH_CaseStudy_01.flv"> </a></span></p>
+
+<video width="420" height="268" controls>
+    <source src="https://s3.amazonaws.com/caseconsortium-cases/AFTERMATH_CaseStudy_01.mp4" type="video/mp4">
+</video>
+
 <p>
 	<em>Traditional Nicobarese life, narrated by Simron Singh.<br />
 	&copy; Aftermath-The Second Flood, Golden Girls Filmproduktion, 2014</em></p>
 <p>
 	It was estimated that in the traditional economy, the Nicobarese worked about an hour a day in productive activity.<sup><a href="case_id_133_id_950.html#_ftn3" name="_ftnref3" title="">[3]</a></sup> They put their energy into social relations, artwork, festivals, contests, and ritual expressions that honored their ancestors and the islands&rsquo; spirits. Outside the Nicobars, the people were perhaps best known for their <em>hentakoi </em>and <em>kareau</em>, painted effigies of people, animals, and spirits that guarded their homes and their ancestors&rsquo; bones. The Nicobarese lived in what was widely said to be a tropical paradise. As late as 1998, a visiting scholar was able to say: &ldquo;As yet there are no signs of any serious conflict within their society between ordinary people and &lsquo;modernists.&rsquo;&rdquo;<sup><a href="case_id_133_id_950.html#_ftn4" name="_ftnref4" title="">[4]</a></sup></p>
-<p>
-	<span class="caption2"><a class="media {width:420, height:286}" href="https://s3.amazonaws.com/caseconsortium/AFTERMATH_CaseStudy_02.flv"> </a></span></p>
+
+<video width="420" height="268" controls>
+    <source src="https://s3.amazonaws.com/caseconsortium-cases/AFTERMATH_CaseStudy_02.mp4" type="video/mp4">
+</video>
+
 <p>
 	<em>Ceremonial life in the Nicobars, narrated by Simron Singh.<br />
 	&copy; Aftermath-The Second Flood, Golden Girls Filmproduktion, 2014</em></p>
