--- a/casestudies/133/casestudy/www/layout/case_id_133_id_951.html
+++ b/casestudies/133/casestudy/www/layout/case_id_133_id_951.html
@@ -335,7 +335,11 @@ font-style:italic;
 <p>
 	The news from the Nicobars reached Singh in Lucknow, India, on December 28, two days after the tsunami. The message, relayed via shipboard radio, was from Singh&rsquo;s friend Rasheed: &ldquo;Central Nicobars entirely wiped out,&rdquo; Rasheed said. &ldquo;Do something as soon as possible.&rdquo;The devastation was shocking: 8,000 reported dead, injured or missing,<sup><a href="case_id_133_id_951.html#_ftn2" name="_ftnref2" title="">[8]</a></sup> the fishing reef destroyed, pigs and chickens drowned, houses toppled, coconut plantations felled. One island was broken into three pieces, others had subsided several feet into the ocean, and most had lost long stretches of coastline. Boats and gear were lost, and all but two of the ancestral effigies had washed away.</p>
 <p>
-	<span class="caption2"><a class="media {width:420, height:286}" href="https://s3.amazonaws.com/caseconsortium/AFTERMATH_CaseStudy_03.flv"> </a></span></p>
+	<span class="caption2">
+        <video width="420" height="268" controls>
+            <source src="https://s3.amazonaws.com/caseconsortium-cases/AFTERMATH_CaseStudy_03.mp4" type="video/mp4">
+        </video>
+    </span></p>
 <p>
 	<em>2004 footage of tsunami damage to the Nicobars.<br />
 	&copy; Aftermath-The Second Flood, Golden Girls Filmproduktion, 2014</em></p>
