--- a/casestudies/133/casestudy/www/layout/case_id_133_id_956.html
+++ b/casestudies/133/casestudy/www/layout/case_id_133_id_956.html
@@ -334,9 +334,18 @@ font-style:italic;
 	Altenburg did ask for a change to the founding partnership agreement. Caritas was taking a chance with this project, because it would not have its own project manager in the islands. In order to ensure high-quality work, he asked that SIF formally commit to the standards of humanitarian engagement promulgated by the Sphere Project, as well as its Code of Conduct. The Sphere Project, launched eight years earlier in reaction to failures in humanitarian response during the Rwanda crisis, was the gold standard for NGO work, and the Steering Committee adopted this change unanimously.<sup><a href="case_id_133_id_956.html#_ftn3" name="_ftnref3" title="">[31]</a></sup></p>
 <p>
 	Discussion then turned to a wide range of sustainable projects that SIF might support in the Nicobars: fishing co-ops, eco-friendly housing, demonstration gardens, a gravity-based water delivery system, a handicrafts enterprise, a hostel for secondary students, a farm for conserving indigenous species, and so on. According to Singh, these projects also interested the Tribal Council and the Nicobar Youth Association, SIF&rsquo;s implementation partners in the Nicobars.</p>
-<p>
-	<em><span class="caption2"></span><a class="media {width:420, height:286}" href="https://s3.amazonaws.com/caseconsortium/AFTERMATH_CaseStudy_08.flv"> </a> Marina Fischer-Kowalski on the SIF mission<br />
-	&copy; Aftermath-The Second Flood, Golden Girls Filmproduktion, 2014</em></p>
+
+    <video width="420" height="268" controls>
+        <source src="https://s3.amazonaws.com/caseconsortium-cases/AFTERMATH_CaseStudy_08.mp4" type="video/mp4">
+    </video>
+    <div>
+        <em>
+            Marina Fischer-Kowalski on the SIF mission<br />
+            &copy; Aftermath-The Second Flood, Golden Girls Filmproduktion, 2014
+        </em>
+    </div>
+
+    <br />
 <p>
 	These local partners had been chosen not only because Singh had worked with them before, but because they were the only organizations in the Central Nicobars legally authorized to engage in development work. This was why Oxfam India had signed its own agreement with them in February. While Oxfam was still training staff and paying overhead costs for the NYA, its relations with the Nicobarese had recently soured, and the NYA would soon terminate the agreement, citing unreasonable accounting requirements, &ldquo;fake promises,&rdquo; and &ldquo;insulting behavior.&rdquo;<sup><a href="case_id_133_id_956.html#_ftn4" name="_ftnref4" title="">[32]</a></sup> Oxfam had been informed of SIF&rsquo;s intention to work with the NYA, so the path was clear to begin project negotiations.</p>
 <p>
