--- a/casestudies/133/casestudy/www/layout/case_id_133_id_961.html
+++ b/casestudies/133/casestudy/www/layout/case_id_133_id_961.html
@@ -275,9 +275,11 @@ font-style:italic;
         <p>
          <em>
           <span class="caption2">
-           <a class="media {width:420, height:286}" href="https://s3.amazonaws.com/caseconsortium/AFTERMATH_CaseStudy_06.flv">
-           </a>
+           <video width="420" height="268" controls>
+               <source src="https://s3.amazonaws.com/caseconsortium-cases/AFTERMATH_CaseStudy_06.mp4" type="video/mp4">
+           </video>
           </span>
+          <br />
           Nicobarese and goods purchased with aid dollars
           <br/>
           © Aftermath-The Second Flood, Golden Girls Filmproduktion, 2014
