--- a/casestudies/133/casestudy/www/layout/case_id_133_id_963.html
+++ b/casestudies/133/casestudy/www/layout/case_id_133_id_963.html
@@ -339,7 +339,11 @@ font-style:italic;
 <p>
 	On the last day of the workshop, Fischer-Kowalski dispatched a runner to purchase a dozen caps. To each, she taped a slip of paper identifying a role or responsibility for work going forward: &ldquo;researcher,&rdquo; &ldquo;mediator,&rdquo; &ldquo;financer,&rdquo; &ldquo;officer in charge,&rdquo; &ldquo;note taker&rdquo; and so on. First she piled the caps on the participants currently performing those duties: Singh, Rasheed, and Fischer-Kowalski each wore many hats. Then she took back the caps and began redistributing them. &ldquo;Who will take this responsibility? Who will take that one?&rdquo; She hoped the message of self-help was clear.</p>
 <p>
-	<span class="caption2"><a class="media {width:420, height:286}" href="https://s3.amazonaws.com/caseconsortium/AFTERMATH_CaseStudy_09.flv"> </a></span></p>
+	<span class="caption2">
+        <video width="420" height="268" controls>
+            <source src="https://s3.amazonaws.com/caseconsortium-cases/AFTERMATH_CaseStudy_09.mp4" type="video/mp4">
+        </video>
+    </span></p>
 <p>
 	<em>Nicobarese on retreat in the Himalayas<br />
 	&copy; Aftermath-The Second Flood, Golden Girls Filmproduktion, 2014</em></p>
