--- a/casestudies/133/casestudy/www/layout/case_id_133_id_954.html
+++ b/casestudies/133/casestudy/www/layout/case_id_133_id_954.html
@@ -339,13 +339,21 @@ font-style:italic;
 <p>
 	In late February, the Nicobarese appealed to Singh to help them get tools. Singh was confident he could deliver. After all, he was well acquainted with the Indian commissioner overseeing disaster relief in the islands; the two were sharing a room and a satellite phone in the government guesthouse on one of the islands, and they sat down together periodically with the Tribal Council to discuss the government&rsquo;s plans for tsunami aid. But the tools request didn&rsquo;t fly. A large order of tools was already on order from Punjab, the commissioner said; they would arrive in the Nicobars in two months.</p>
 <p>
-	<em><span class="caption2"><a class="media {width:420, height:286}" href="https://s3.amazonaws.com/caseconsortium/AFTERMATH_CaseStudy_04.flv"> </a></span></em></p>
+	<em><span class="caption2">
+        <video width="420" height="268" controls>
+            <source src="https://s3.amazonaws.com/caseconsortium-cases/AFTERMATH_CaseStudy_04.mp4" type="video/mp4">
+        </video>
+    </span></em></p>
 <p>
 	<em>Nicobarese in the refugee camps.<br />
 	&copy; Aftermath-The Second Flood, Golden Girls Filmproduktion, 2014</em></p>
 <p>
 	<em>Two months? </em>But the monsoons would be starting soon. The Nicobarese pressed their case, but ran into another objection. &ldquo;We are going to build you houses anyway,&rdquo; Singh recalls the government saying. &ldquo;Why do you want tools? We&#39;ll give you <em>everything</em>.&rdquo; In the logic of humanitarian aid, Jonathan&rsquo;s modest, hand-built, self-determined proposal was setting the sights too low.<br />
-	<span class="caption2"><a class="media {width:420, height:286}" href="https://s3.amazonaws.com/caseconsortium/AFTERMATH_CaseStudy_05.flv"> </a></span></p>
+	<span class="caption2">
+        <video width="420" height="268" controls>
+            <source src="https://s3.amazonaws.com/caseconsortium-cases/AFTERMATH_CaseStudy_05.mp4" type="video/mp4">
+        </video>
+    </span></p>
 <p>
 	<em>Nicobarese in the refugee camps.<br />
 	&copy; Aftermath-The Second Flood, Golden Girls Filmproduktion, 2014<br />
