--- a/casestudies/133/casestudy/www/layout/case_id_133_id_957.html
+++ b/casestudies/133/casestudy/www/layout/case_id_133_id_957.html
@@ -290,8 +290,9 @@ font-style:italic;
         </p>
         <p>
          <span class="caption2">
-          <a class="media {width:420, height:286}" href="https://s3.amazonaws.com/caseconsortium/AFTERMATH_CaseStudy_07.flv">
-          </a>
+             <video width="420" height="268" controls>
+                 <source src="https://s3.amazonaws.com/caseconsortium-cases/AFTERMATH_CaseStudy_07.mp4" type="video/mp4">
+             </video>
          </span>
         </p>
         <p>
